# kubeevent

./: .env  .gitignore  Dockerfile  README.md  db.py  k8s_watcher.py  main.py  metrics.py  models.py  pyproject.toml  requirements.txt  routes.py  runtime.py
.github/workflows/: ci.yml  docker-publish.yml
Grafana_Dashboards/: DaemonSet_Detail.json  Deployment_Detail.json  Kubernetes_Event_Monitoring.json  Namespace Detail.json  Node_Events.json  PVC_Events.json  Pod_Detail.json  StatefulSet_Detail.json  Workload_Analysis.json
kubectl/: rbac-events.yaml
kubeevent-chart/: Chart.yaml  readme.md  values.yaml
kubeevent-chart/templates/: deployment.yaml  rbac.yaml
static/: app.js
templates/: index.html
