[project]
name = "kubeevents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocron>=2.1",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "kubernetes>=34.1.0",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
